# Face-recognition-based-attendance-system-

./: README.md
client/: index.html  index.htnl  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/public/models/: ssd_mobilenetv1_model-shard1
client/src/: App.jsx  index.css
client/src/components/admin/: AttendanceStats.jsx  ManualAttendance.jsx  StudentManagement.jsx
client/src/components/common/: AdminRoute.jsx  (+3 more)
client/src/contexts/: AuthContext.jsx
client/src/pages/: AdminDashboard.jsx  AttendanceCaptureSystem.jsx  AttendanceReports.jsx  Dashboard.jsx  Login.jsx  NotFound.jsx  Register.jsx  StudentAttendance.jsx  StudentEdit.jsx  StudentRegistration.jsx  StudentsList.jsx
client/src/services/: api.js
face-recognition/: face_encodings.pkl  face_recognition_server.log.1  face_recognition_server.log.2  face_recognition_server.log.3  face_recognition_server.py  requirements.txt
ros2_bridge/: CMakeLists.txt  package.xml
ros2_bridge/src/: attendance_publisher.py  face_detection_node.py
server/: .gitignore  package-lock.json  package.json  server.js
server/config/: db.js  default.json
server/controllers/: attendanceController.js  studentController.js
server/middleware/: auth.js  upload.js
server/models/: Attendance.js  Student.js  User.js  face_landmark_68_model-shard1  face_recognition_model-shard1  face_recognition_model-shard2  ssd_mobilenetv1_model-shard2
server/routes/: attendance.js  auth.js  students.js
server/services/: faceRecognition.js  faceRecognitionIntegration.js
server/utils/: ensureDirectories.js
(+4 files in other folders)
